added form to add players

--- a/leaderboard/templates.html
+++ b/leaderboard/templates.html
@@ -13,3 +13,17 @@
     {{/if}}
     </ul>
 </template>
+
+<template name="addPlayerForm">
+    <form> 
+        <input type="text" name="playerName">
+        <input type="submit" value="Add Player">
+    </form> 
+</template>
+
+<template name="remPlayerForm">
+    <form> 
+        <input type="text" name="playerName">
+        <input type="submit" value="Remove Player">
+    </form> 
+</template>
