--- a/leaderboard/main.html
+++ b/leaderboard/main.html
@@ -5,5 +5,7 @@
     <h1>This is the main html file</h1>
     <h2>Below is the Leaderboard template:</h2>
     {{> leaderboard}}
+    <h2>Next is the addPlayerForm template:</h2>
+    {{> addPlayerForm}}
 </body>
 
